@@ -3,7 +3,7 @@
 \alias{forecast.nnetar}
 
 \title{Neural Network Time Series Forecasts}
-\usage{nnetar(x, p, P=1, size, repeats=20, lambda=NULL)
+\usage{nnetar(x, p, P=1, size, repeats=20, lambda=NULL, model = NULL)
 \method{forecast}{nnetar}(object, h=ifelse(object$m > 1, 2 * object$m, 10), 
     lambda=object$lambda, ...)
 }
@@ -15,6 +15,7 @@
 \item{size}{Number of nodes in the hidden layer. Default is half of the number of input nodes plus 1.}
 \item{repeats}{Number of networks to fit with different random starting weights. These are then averaged when producing forecasts.}
 \item{lambda}{Box-Cox transformation parameter.}
+\item{model}{Apply an existing model to a new data set.}
 \item{object}{An object of class \code{nnetar} generated by \code{\link{nnetar}}.}
 \item{h}{Number of periods for forecasting.}
 \item{...}{Other arguments.}
